# flask-etsyapi

./: Makefile  app.py  pyproject.toml  requirements.txt
flask_etsyapi/: __init__.py  app.py
