[tool.poetry]
name = "flask-etsyapi"
version = "0.1.0"
description = ""
authors = ["Sachkov Ilya <sos31337@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_etsyapi"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
