[tool.poetry]
name = "flask-etsyapi"
version = "0.1.0"
description = ""
authors = ["Sachkov Ilya <sos31337@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_etsyapi"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
requests = "^2.28.2"
requests-oauthlib = "^1.3.1"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
